fix: Display navlinks and theme switcher in a row on mobile

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -69,15 +69,16 @@
   .nav_links {
     margin-top: 1rem;
     margin-left: 0;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
   }
 
   .nav_links a {
-    margin: 0.5rem 0;
+    margin: 0 0.5rem;
   }
 
   .theme_toggle {
-    margin-top: 1rem;
-    margin-left: 0;
+    margin-top: 0;
+    margin-left: 1rem;
   }
 }
